# py_midiplus_fit

./: .gitignore  .gitlab-ci.yml  LICENSE  Pipfile  README.md  setup.cfg
py_midiplus_fit/: Fader.py  MidiPlus.py  __init__.py
