[metadata]
# replace with your username:
name = py-midiplus-fit
version = 1.1.0
author = Mitchell Monahan
author_email = pypi@nofla.me
description = A library for interacting with the MiDiPLUS FIT midi controller.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/soccermitchy/py_midiplus_fit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    python-rtmidi